--- a/src/app/site/body/body.component.html
+++ b/src/app/site/body/body.component.html
@@ -1,51 +1,53 @@
-<div class="ui-g-12 ui-sm-12 ui-md-12 ui-lg-12 no-padding background-banner">
-  <div class="content-banner">
-    <div class="position-title-banner">
-        <h2 class="title-banner">Lorem ipsum <span class="color-dif">dolor</span></h2>
-    </div>
-    <div class="position-btn-banner">
-        <app-button-href-background hRef="#" classColor="backgroundFull" content="ver agora"></app-button-href-background>
+<div class="no-padding background-banner">
+  <div class="under-background">
+    <div class="content-banner">
+      <div class="position-title-banner">
+          <h2 class="title-banner">Bem-vindo á feira da <span class="color-dif">Parangaba</span></h2>
+      </div>
+      <div class="position-btn-banner">
+          <app-button-href-background hRef="#" classColor="backgroundFull" content="ver agora"></app-button-href-background>
+      </div>
     </div>
   </div>
 </div>
 
-<div class="ui-g-12 ui-sm-12 ui-md-12 ui-lg-12 no-padding cards-description" >
+<section id="section-prod" class="cards-description" >
   <div class="position-title-opor">
-      <h4 class="title-opor">Lorem ipsum dolor sit amet <span class="color-dif">Indian</span></h4>
+      <h4 class="title-opor">Alguns dos <span class="color-dif">produtos</span> que temos...</h4>
   </div>
   <div class="position-cards">
-      <div class="ui-g-12 ui-sm-12 ui-md-12 ui-lg-12 no-padding row_oppor">
-          <div class="column_oppor">
+      <div class="no-padding row_oppor">
+          <div class="ui-sm-12 ui-md-6 ui-g-6">
               <div class="position-inside-oppor">
-                  <h6 class="title-inside-oppor">Sed ut perspiciatis</h6>
-                  <p class="descri-inside-oppor">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.</p>
+                  <h6 class="title-inside-oppor">Passarinhos</h6>
+                  <p class="descri-inside-oppor">Os passarinhos são membros da ordem Passeriformes, que inclui mais de 5.000 espécies diferentes. Eles vêm em uma ampla variedade de tamanhos, cores e formas. Desde os pequenos beija-flores, capazes de bater suas asas rapidamente em um frenesi colorido, até os majestosos falcões, que patrulham os céus com seu olhar aguçado, cada espécie tem suas próprias características únicas.</p>
                   <div class="positon-btn-more">
                     <app-button-href-background hRef="#" classColor="backgroundHalf" content="Saber Mais"></app-button-href-background>
                   </div>
               </div>
           </div>
-          <div class="column_oppor">
+          <div class="ui-sm-12 ui-md-6 ui-g-6">
               <div class="position-inside-oppor">
-                  <h6 class="title-inside-oppor">Lorem ipsum dolor</h6>
-                  <p class="descri-inside-oppor">Amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi.</p>
+                  <h6 class="title-inside-oppor">Armas</h6>
+                  <p class="descri-inside-oppor">Aqui, oferecemos uma visão abrangente e informativa sobre a indústria de armas, suas tecnologias avançadas e seu papel em diversas áreas. É importante ressaltar que promovemos a conscientização e a responsabilidade no uso de armas, com foco na segurança e no cumprimento das leis.</p>
                   <div class="positon-btn-more">
                       <app-button-href-background hRef="#" classColor="backgroundHalf" content="Saber Mais"></app-button-href-background>
                   </div>
               </div>
           </div>
-          <div class="column_oppor">
+          <div class="ui-sm-12 ui-md-6 ui-g-6">
               <div class="position-inside-oppor">
-                  <h6 class="title-inside-oppor">Nemo enim ipsam</h6>
-                  <p class="descri-inside-oppor">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.</p>
+                  <h6 class="title-inside-oppor">Frutas / verduras</h6>
+                  <p class="descri-inside-oppor">As frutas e verduras são verdadeiros tesouros da natureza. Além de serem saborosas e refrescantes, elas são fontes incríveis de nutrientes essenciais para uma alimentação saudável. Com suas cores vibrantes e sabores únicos, elas oferecem uma experiência sensorial incrível...</p>
                   <div class="positon-btn-more">
                       <app-button-href-background hRef="#" classColor="backgroundHalf" content="Saber Mais"></app-button-href-background>
                   </div>
               </div>
           </div>
-          <div class="column_oppor">
+          <div class="ui-sm-12 ui-md-6 ui-g-6">
               <div class="position-inside-oppor">
-                  <h6 class="title-inside-oppor">Tempor incididunt</h6>
-                  <p class="descri-inside-oppor">Eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora.</p>
+                  <h6 class="title-inside-oppor">Roupas</h6>
+                  <p class="descri-inside-oppor">A moda é uma forma de expressão pessoal, e acreditamos que cada indivíduo tem seu estilo único. No nosso estande, temos uma ampla variedade de roupas para todos os gostos e ocasiões. Se você busca um visual elegante e sofisticado, temos uma coleção de peças clássicas e atemporais que certamente irão encantar você.</p>
                   <div class="positon-btn-more">
                       <app-button-href-background hRef="#" classColor="backgroundHalf" content="Saber Mais"></app-button-href-background>
                   </div>
@@ -53,5 +55,129 @@
           </div>
       </div>
   </div>
-</div>
+</section>
+
+<section id="section-menber">
+  <div class="position-title-opor">
+    <h4 class="title-opor">Conheça a nossa Equipe de <span class="color-dif">Profissionais</span></h4>
+  </div>
+  <div class="picturesAboutUs">
+    <div class="card-team">
+        <div class="positon-img-team">
+            <img class="img-team" src="/assets/imagens/feirante1.jpg" />
+        </div>
+        <div class="positon-name-team">
+            <p class="name-team"><a class="name-team" data-target="_blank"><i class="icon-about-team fab fa-linkedin"></i>JOÃ0 PEREIRA</a></p>
+            <p class="occupation-team"><i class="icon-about-team fas fa-laptop"></i>Vendendor de peixe</p>
+            <p class="city-team"><i class="icon-about-team fas fa-map-marker-alt"></i>Fortaleza/CE</p>
+        </div>
+    </div>
+    <div class="card-team">
+        <div class="positon-img-team">
+            <img class="img-team" src="/assets/imagens/feirante2.jpg" />
+        </div>
+        <div class="positon-name-team">
+            <p class="name-team"><a class="name-team" data-target="_blank"><i class="icon-about-team fab fa-linkedin"></i>CAETANO MELO</a></p>
+            <p class="occupation-team"><i class="icon-about-team fas fa-laptop"></i>Vendendor de fruta</p>
+            <p class="city-team"><i class="icon-about-team fas fa-map-marker-alt"></i>Fortaleza/CE</p>
+        </div>
+    </div>
+    <div class="card-team">
+      <div class="positon-img-team">
+          <img class="img-team" src="/assets/imagens/feirante3.jpg" />
+      </div>
+      <div class="positon-name-team">
+          <p class="name-team"><a class="name-team" data-target="_blank"><i class="icon-about-team fab fa-linkedin"></i>JULIANA MARTINS</a></p>
+          <p class="occupation-team"><i class="icon-about-team fas fa-laptop"></i>Vendendor de salada</p>
+          <p class="city-team"><i class="icon-about-team fas fa-map-marker-alt"></i>Fortaleza/CE</p>
+      </div>
+    </div>
+    <div class="card-team">
+      <div class="positon-img-team">
+          <img class="img-team" src="/assets/imagens/feirante4.jpg" />
+      </div>
+      <div class="positon-name-team">
+          <p class="name-team"><a class="name-team" data-target="_blank"><i class="icon-about-team fab fa-linkedin"></i>ALANA PEREIRA</a></p>
+          <p class="occupation-team"><i class="icon-about-team fas fa-laptop"></i>Vendendor de vinho</p>
+          <p class="city-team"><i class="icon-about-team fas fa-map-marker-alt"></i>Fortaleza/CE</p>
+      </div>
+    </div>
+    <div class="card-team">
+      <div class="positon-img-team">
+          <img class="img-team" src="/assets/imagens/feirante5.jpg" />
+      </div>
+      <div class="positon-name-team">
+          <p class="name-team"><a class="name-team" data-target="_blank"><i class="icon-about-team fab fa-linkedin"></i>RYCO FRANÇA</a></p>
+          <p class="occupation-team"><i class="icon-about-team fas fa-laptop"></i>Vendendor de bolsa</p>
+          <p class="city-team"><i class="icon-about-team fas fa-map-marker-alt"></i>Fortaleza/CE</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section id="section-depoi">
+  <div class="position-title-benefit">
+    <h3 class="title-benefit">O que as pessoas estão falando</h3>
+  </div>
+  <div class="row">
+      <div class="ui-md-4 ui-sm-12 ui-g-4">
+          <div class="content-testimony">
+              <div class="position-img-marks">
+                  <svg class="img-marks" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 172 172" style=" fill:#000000;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><path d="M0,172v-172h172v172z" fill="none"></path><g><path d="M8.6,140.46667v-65.93333c0,-26.82053 19.522,-47.27133 45.86667,-48.6588v12.12027c-15.0156,4.89053 -22.93333,17.4752 -22.93333,36.53853v2.86667h40.13333v63.06667z" fill="#457b9d"></path><path d="M51.6,28.97627v7.0004c-14.83213,5.7276 -22.93333,19.25253 -22.93333,38.55667v5.73333h5.73333h34.4v57.33333h-57.33333v-63.06667c0,-24.62467 16.55787,-42.99427 40.13333,-45.55707M57.33333,22.93333c-29.55533,0 -51.6,22.04467 -51.6,51.6v68.8h68.8v-68.8h-40.13333c0,-14.7748 5.01667,-29.62413 22.93333,-34.4v-17.2z" fill="#ffffff"></path><g><path d="M100.33333,140.46667v-65.93333c0,-26.82053 19.522,-47.27133 45.86667,-48.6588v12.12027c-15.0156,4.89053 -22.93333,17.4752 -22.93333,36.53853v2.86667h40.13333v63.06667z" fill="#457b9d"></path><path d="M143.33333,28.97627v7.0004c-14.83213,5.7276 -22.93333,19.25253 -22.93333,38.55667v5.73333h5.73333h34.4v57.33333h-57.33333v-63.06667c0,-24.62467 16.55787,-42.99427 40.13333,-45.55707M149.06667,22.93333c-29.55533,0 -51.6,22.04467 -51.6,51.6v68.8h68.8v-68.8h-40.13333c0,-14.7748 5.01667,-29.62413 22.93333,-34.4v-17.2z" fill="#ffffff"></path></g></g></g></svg>
+              </div>
+              <div class="position-testimony">
+                  <p class="testimony">A Feira Parangaba realmente me surpreendeu de uma maneira maravilhosa!</p>
+              </div>
+              <div class="position-img-testimony">
+                  <img class="img-testimony" src="/assets/imagens/vilson.jpeg" />
+              </div>
+              <div class="position-name-testimony">
+                  <p class="name-testimony">Vilson</p>
+                  <p class="work-testimony">Escritor</p>
+              </div>
+          </div>
+      </div>
+      <div class="ui-md-4 ui-sm-12 ui-g-4">
+          <div class="content-testimony">
+              <div class="position-img-marks">
+                  <svg class="img-marks" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 172 172" style=" fill:#000000;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><path d="M0,172v-172h172v172z" fill="none"></path><g><path d="M8.6,140.46667v-65.93333c0,-26.82053 19.522,-47.27133 45.86667,-48.6588v12.12027c-15.0156,4.89053 -22.93333,17.4752 -22.93333,36.53853v2.86667h40.13333v63.06667z" fill="#457b9d"></path><path d="M51.6,28.97627v7.0004c-14.83213,5.7276 -22.93333,19.25253 -22.93333,38.55667v5.73333h5.73333h34.4v57.33333h-57.33333v-63.06667c0,-24.62467 16.55787,-42.99427 40.13333,-45.55707M57.33333,22.93333c-29.55533,0 -51.6,22.04467 -51.6,51.6v68.8h68.8v-68.8h-40.13333c0,-14.7748 5.01667,-29.62413 22.93333,-34.4v-17.2z" fill="#ffffff"></path><g><path d="M100.33333,140.46667v-65.93333c0,-26.82053 19.522,-47.27133 45.86667,-48.6588v12.12027c-15.0156,4.89053 -22.93333,17.4752 -22.93333,36.53853v2.86667h40.13333v63.06667z" fill="#457b9d"></path><path d="M143.33333,28.97627v7.0004c-14.83213,5.7276 -22.93333,19.25253 -22.93333,38.55667v5.73333h5.73333h34.4v57.33333h-57.33333v-63.06667c0,-24.62467 16.55787,-42.99427 40.13333,-45.55707M149.06667,22.93333c-29.55533,0 -51.6,22.04467 -51.6,51.6v68.8h68.8v-68.8h-40.13333c0,-14.7748 5.01667,-29.62413 22.93333,-34.4v-17.2z" fill="#ffffff"></path></g></g></g></svg>
+              </div>
+              <div class="position-testimony">
+                  <p class="testimony">A Feira Parangaba foi uma verdadeira celebração da comunidade e da cultura local! Desde o momento em que entrei, fui envolvido por uma atmosfera contagiante, repleta de cores, aromas e sons fascinantes. </p>
+              </div>
+              <div class="position-img-testimony">
+                  <img class="img-testimony" src="/assets/imagens/marina.jpeg" />
+              </div>
+              <div class="position-name-testimony">
+                  <p class="name-testimony">Marina</p>
+                  <p class="work-testimony">Estudante</p>
+              </div>
+          </div>
+      </div>
+      <div class="ui-md-4 ui-sm-12 ui-g-4">
+          <div class="content-testimony">
+              <div class="position-img-marks">
+                  <svg class="img-marks" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 172 172" style=" fill:#000000;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><path d="M0,172v-172h172v172z" fill="none"></path><g><path d="M8.6,140.46667v-65.93333c0,-26.82053 19.522,-47.27133 45.86667,-48.6588v12.12027c-15.0156,4.89053 -22.93333,17.4752 -22.93333,36.53853v2.86667h40.13333v63.06667z" fill="#457b9d"></path><path d="M51.6,28.97627v7.0004c-14.83213,5.7276 -22.93333,19.25253 -22.93333,38.55667v5.73333h5.73333h34.4v57.33333h-57.33333v-63.06667c0,-24.62467 16.55787,-42.99427 40.13333,-45.55707M57.33333,22.93333c-29.55533,0 -51.6,22.04467 -51.6,51.6v68.8h68.8v-68.8h-40.13333c0,-14.7748 5.01667,-29.62413 22.93333,-34.4v-17.2z" fill="#ffffff"></path><g><path d="M100.33333,140.46667v-65.93333c0,-26.82053 19.522,-47.27133 45.86667,-48.6588v12.12027c-15.0156,4.89053 -22.93333,17.4752 -22.93333,36.53853v2.86667h40.13333v63.06667z" fill="#457b9d"></path><path d="M143.33333,28.97627v7.0004c-14.83213,5.7276 -22.93333,19.25253 -22.93333,38.55667v5.73333h5.73333h34.4v57.33333h-57.33333v-63.06667c0,-24.62467 16.55787,-42.99427 40.13333,-45.55707M149.06667,22.93333c-29.55533,0 -51.6,22.04467 -51.6,51.6v68.8h68.8v-68.8h-40.13333c0,-14.7748 5.01667,-29.62413 22.93333,-34.4v-17.2z" fill="#ffffff"></path></g></g></g></svg>
+              </div>
+              <div class="position-testimony">
+                  <p class="testimony">Até então os meios de proteção pareciam de difícil acesso, diminuindo as chances de se realizar uma atuação mais preventiva, restando apenas uma via repressiva trabalhosa, mas completamente à mercê do acaso. Com todas as informações presentes no site, parece realmente seguro e sem muitas complicações manter algo seu, fruto do seu trabalho, protegido.</p>
+              </div>
+              <div class="position-img-testimony">
+                  <img class="img-testimony" src="/assets/imagens/natalia.jpeg" />
+              </div>
+              <div class="position-name-testimony">
+                  <p class="name-testimony">Natália</p>
+                  <p class="work-testimony">Estudante</p>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
+
+<section id="section-location">
+  <div class="position-title-opor">
+    <h4 class="title-opor"><span class="color-dif">Aonde</span> estamos?</h4>
+  </div>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3981.1925362845886!2d-38.56587242444325!3d-3.768240696205616!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7c74f942ceff641%3A0xb3a8c263d8eb7f5b!2sFeira%20da%20Parangaba!5e0!3m2!1spt-BR!2sbr!4v1687136824032!5m2!1spt-BR!2sbr" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+</section>
 
