--- a/src/app/site/footer/footer.component.html
+++ b/src/app/site/footer/footer.component.html
@@ -1,16 +1,13 @@
   <div class="ui-g-12 ui-sm-12 ui-md-12 ui-lg-12 no-padding">
       <div class="position-top-footer">
         <div class="position-logo-center">
-           <img class="logo-center" src="/assets/imagens/logo-indian.jpg" />
+           <img class="logo-center" src="/assets/imagens/logo-prefeitura.png" />
         </div>
       </div>
   </div>
   <div class="ui-g-12 ui-sm-12 ui-md-12 ui-lg-12 no-padding">
     <div class="psoiton-social-medias">
       <div class="social-incard">
-        <div class="background-icon">
-            <a class="icon-style" target="_blank" href="#"><fa-icon [icon]="['fab', 'github']" size="2x"></fa-icon></a>
-        </div>
         <div class="background-icon">
             <a class="icon-style" target="_blank" href="#"><fa-icon [icon]="['fab', 'facebook']" size="2x"></fa-icon></a>
         </div>
@@ -23,6 +20,6 @@
       </div>
     </div>
     <div class="position-copyright">
-      <p class="copyright-sytle">© iDun {{year}}. Todos os direitos reservados</p>
+      <p class="copyright-sytle">© feira-livre {{year}}. Todos os direitos reservados</p>
     </div>
   </div>
