--- a/src/app/site/header/header.component.scss
+++ b/src/app/site/header/header.component.scss
@@ -10,12 +10,14 @@ nav {
   align-items: center;
   justify-content: space-between;
   padding: 10px 15px;
+  flex-wrap: wrap;
 }
 
 .alination {
   display: flex;
   flex-direction: row;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .logo_navbar {
@@ -29,7 +31,34 @@ nav {
 }
 
 .nav-item {
-  margin: 15px 0px;
+  margin: 15px 10px;
+  position: relative;
+  list-style: none;
+}
+
+.nav-link {
+  font-size: 18px;
+  color: $dark-color;
+  cursor: pointer;
+  padding-bottom: 0.2rem;
+}
+
+.nav-link::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: -2px;
+  left: 0;
+  background-color: $sec-color-font;
+  visibility: hidden;
+  transform: scaleX(0);
+  transition: all 0.3s ease-in-out 0s;
+}
+
+.nav-link:hover::before {
+  visibility: visible;
+  transform: scaleX(1);
 }
 
 .space-btn {
